--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <title>SC_lab_website</title>
+    <title>SocioLegal Lab</title>
   </head>
   <body>
     <div id="root"></div>
